Prevent scrollbar on bottom of category selection screen (https://github.com/woocommerce/woocommerce-blocks/pull/191)
Only show vertical scrollbar if the container is scrollable

--- a/plugins/woocommerce-blocks/assets/js/components/search-list-control/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/components/search-list-control/style.scss
@@ -35,7 +35,8 @@
 .woocommerce-search-list__list {
 	padding: 0;
 	max-height: 18.5em;
-	overflow-x: scroll;
+	overflow-x: hidden;
+	overflow-y: auto;
 	border-top: 1px solid $core-grey-light-500;
 	border-bottom: 1px solid $core-grey-light-500;
 
